配置中心服务器

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.application.name=service-config
+spring.profiles.active=native
+#指定配置文件位置为classpath目录下的config目录
+spring.cloud.config.server.native.searchLocations=classpath:/config
